# CMakePublic

./: .gitignore  CMakeLists.txt  README.md
.github/: lint.yml
.github/workflow/: build-pipeline.yml
.github/workflows/: unit_testing.yaml
cmake/: CMakePublicConfig.cmake.in
include/cmake_public/: cmake_public.hpp  hello.hpp  world.hpp
src/: CMakeLists.txt
src/cmake_public/: CMakeLists.txt  hello.cpp  world.cpp
test/: CMakeLists.txt
test/cmake_public/: CMakeLists.txt  test_cmake_public.cpp  test_hello.cpp  test_world.cpp
